<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/enter_product_details"
    tools:context=".UpdateProductActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_marginTop="208dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_product"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="number|text|textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:entries="@array/labels_unit"
        app:layout_constraintEnd_toEndOf="@+id/editTextQuantity"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/editTextQuantity"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantity" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/editTextQuantity"
        app:layout_constraintStart_toEndOf="@+id/editTextQuantity"
        app:layout_constraintTop_toTopOf="@+id/editTextQuantity" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:layout_marginEnd="20dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/editTextQuantity"
        app:layout_constraintEnd_toStartOf="@+id/editTextQuantity"
        app:layout_constraintTop_toTopOf="@+id/editTextQuantity"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>