<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewName"
        style="@style/item_title"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical"

        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewQuantity"
        style="@style/item_title"
        android:layout_width="97dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeMinTextSize="7sp"

        android:autoSizeTextType="uniform"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewName"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toTopOf="@+id/textViewName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewUnit"
        style="@style/item_title"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeMinTextSize="7sp"
        android:autoSizeTextType="uniform"

        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewQuantity"
        app:layout_constraintTop_toTopOf="@+id/textViewQuantity"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>